test/expected/explain_co_less_rck_i++default.out
explain int operator<(S const&) const = default
        ^
9: error: operator < must return bool
